# r2_pingmu

./: .gitignore  README.md  aruco_camera_receiver.py  aruco_custom_6x6_1000.npz  aruco_screen_sender.py  index.html  merlin-kfs-distribution.json  server.js
weapon_docking/: .gitignore  CMakeLists.txt  README.md  package.xml
weapon_docking/action/: WeaponDock.action
weapon_docking/config/: params.yaml
weapon_docking/include/weapon_docking/: docking_control.hpp  weapon_docking_node.hpp  weapon_docking_processor.hpp
weapon_docking/launch/: weapon_docking.launch.py
weapon_docking/src/: docking_control.cpp  main.cpp  weapon_docking_node.cpp  weapon_docking_processor.cpp
weapon_docking/test/: test_docking_control.cpp  test_weapon_docking_error_topic_contract.py
